<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragPerfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_perfil">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginVertical="75dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosNombre"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/datNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosCorreo"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/datCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:text="No se ha quitado"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosTelefono"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/datTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosContraseña"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/datContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="475dp"
        android:gravity="center">


        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/datosEliminar"
            android:textSize="12dp"
            android:background="@drawable/boton_redondeado"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/datosCerrar"
            android:textSize="12dp"
            android:background="@drawable/boton_redondeado"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

</FrameLayout>