<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FragCuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_cuenta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/fragment_design"
        tools:ignore="MissingConstraints"/>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="75dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosNombre"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/datNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosCorreo"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/datCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosTelefono"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/datTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/datosContraseña"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/datContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input"
            android:ems="10"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/datosEditar"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/datosCerrar"
            android:textSize="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>