<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_start_menu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/home_background"
        android:contentDescription="@string/background" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="84dp"
        android:id="@+id/contenedorMenu"
        app:layout_constraintBottom_toBottomOf="parent" >
    </FrameLayout>

    <!--<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@drawable/boton_redondeado"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/FragCuenta"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado_blanco"
                android:onClick="unClick"
                android:text="@string/menuBotonCuenta"
                android:textSize="12sp" />

            <Button
                android:id="@+id/FragPagos"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="unClick"
                android:text="@string/menuBotonPagos"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/FragResumen"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="unClick"
                android:text="@string/menuBotonResumen"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_bottom"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            app:fab_addButtonColorNormal="@color/purple_200"
            app:fab_expandDirection="up"
            app:fab_labelStyle="@style/btnFlotante"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBolsillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/white"
                app:fab_icon="@drawable/bolsillo_64px"
                app:fab_size="mini"
                app:fab_title="@string/menuBolsillos" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/white"
                app:fab_icon="@drawable/target_64px"
                app:fab_size="mini"
                app:fab_title="@string/menuTarjeta" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnTransferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/white"
                app:fab_icon="@drawable/transfer_64px"
                app:fab_size="mini"
                app:fab_title="@string/menuTransferencia" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_bottom"
        app:menu="@menu/bottom_navigation_menu"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>